@@ -190,7 +190,7 @@ test cases in this new frame work.
 ** Specific Macros
 - AC_FUNC_CHOWN, AC_FUNC_MALLOC, AC_FUNC_STRERROR_R,
   AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK, AC_FUNC_STAT, AC_FUNC_LSTAT,
-  AC_FUNC_ERROR_AT_LINE.
+  AC_FUNC_ERROR_AT_LINE, AC_FUNC_OBSTACK.
   New.
 
 - AC_FUNC_GETGROUPS
